apps/external-apps/home-assistant/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: traefik
spec:
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123

---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: traefik
subsets:
  - addresses:
      - ip: 192.168.0.205
    ports:
      - port: 8123
