apps/external-apps/home-assistant/ingressroute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-ingressroute
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.scheil.one`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
  tls:
    certResolver: letsencrypt-prod
    domains:
      - main: home.scheil.one
    secretName: home-scheil-one-tls
